.provarCaches/00D5f000005vwGkEAI/objects/rstk__sycustom__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sycustom</customHelpPage>
    <description>sycustom__c</description>
    <fields>
        <fullName>rstk__sycustom_oldim__c</fullName>
        <description>Opportunity Line - Dimension Field</description>
        <inlineHelpText>SF Opportunity Line Field for the Dimension value.</inlineHelpText>
        <label>Opportunity Line - Dimension Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustom_oluom__c</fullName>
        <description>SF Opportunity Line - Unit of Measure Field</description>
        <inlineHelpText>SF Opportunity Line Field for the Unit of Measure value.</inlineHelpText>
        <label>SF Opp. Line - Unit of Measure Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustom_oplproduct__c</fullName>
        <description>SF Opportunity Line Field for Item Number</description>
        <inlineHelpText>SF Opportunity Line Field for Item Number</inlineHelpText>
        <label>SF Opportunity Line - Item Number Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustom_oppjobnum__c</fullName>
        <inlineHelpText>This name of the Opportunity field containing the Opportunity Job Number. The value of this field will be used as Order number for Rootstock Quotes and Sales Orders.</inlineHelpText>
        <label>Opportunity Job Number Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustom_qldim__c</fullName>
        <description>SF Quote Line - Dimension Field</description>
        <inlineHelpText>SF Quote Line Field for the Dimension value.</inlineHelpText>
        <label>SF Quote Line - Dimension Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustom_qlproduct__c</fullName>
        <description>SF Quote Line Field for Item Number</description>
        <inlineHelpText>SF Quote Line Field for Item Number</inlineHelpText>
        <label>SF Quote Line - Item Number Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycustom_qluom__c</fullName>
        <description>SF Quote Line - Unit of Measure Field</description>
        <inlineHelpText>SF Quote Line Field for the Unit of Measure value.</inlineHelpText>
        <label>SF Quote Line - Unit of Measure Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>System Custom Configuration</label>
    <listViews>
        <fullName>rstk__RS_System_Custom_Configuration</fullName>
        <columns>NAME</columns>
        <columns>rstk__sycustom_oplproduct__c</columns>
        <columns>rstk__sycustom_qlproduct__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>System Custom Configuration</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>System Custom Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Custom Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>